--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
-  <title>Truth or Trap - Game Modular</title>
+  <title>Truth or Trap - Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,6 +11,9 @@
       color: white;
       text-align: center;
       padding: 20px;
+      margin: 0;
+      min-height: 100vh;
+      box-sizing: border-box;
     }
     #overlay {
       background-color: rgba(0, 0, 0, 0.65);
@@ -18,6 +21,10 @@
       border-radius: 15px;
       max-width: 800px;
       margin: auto;
+      box-sizing: border-box;
+      transition: all 0.3s ease;
+      border: 5px solid transparent;
+      box-shadow: 0 0 20px transparent;
     }
     input, select, button {
       font-size: 16px;
@@ -25,6 +32,7 @@
       margin: 5px;
       border-radius: 5px;
       border: none;
+      box-sizing: border-box;
     }
     input, select {
       width: 150px;
@@ -52,6 +60,7 @@
       display: inline-block;
       min-width: 120px;
       font-weight: bold;
+      box-sizing: border-box;
     }
     #voteArea button {
       margin: 5px;
@@ -60,7 +69,7 @@
       border-radius: 8px;
       background-color: #007bff;
       color: white;
-      cursor: pointer;
+      box-sizing: border-box;
     }
     #voteArea button:hover:not(:disabled) {
       background-color: #0056b3;
@@ -95,6 +104,7 @@
       border-radius: 8px;
       min-height: 80px;
       font-size: 18px;
+      box-sizing: border-box;
     }
     #countdown {
       color: yellow;
@@ -108,6 +118,7 @@
       height: 20px;
       border-radius: 10px;
       margin-top: 10px;
+      box-sizing: border-box;
     }
     #progressBar {
       width: 100%;
@@ -126,10 +137,29 @@
       font-weight: bold;
       cursor: pointer;
       margin-top: 20px;
+      box-sizing: border-box;
+    }
+    #buttonsArea button {
+      font-size: 18px;
+      padding: 10px 20px;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 15px;
+      box-sizing: border-box;
+    }
+    #buttonsArea button:hover:not(:disabled) {
+      background-color: #218838;
     }
     @media (max-width: 768px) {
+      /* تصميم خاص بالهاتف */
       #overlay {
         padding: 10px;
+        max-width: 100%;
+        margin: 10px;
       }
       h1 {
         font-size: 22px;
@@ -153,6 +183,8 @@
       }
     }
   </style>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
 <body>
   <div id="overlay">
@@ -163,17 +195,17 @@
         <label for="roundsSelect">Number of rounds:</label>
         <select id="roundsSelect">
           <option value="5">5</option>
-          <option value="10">10</option>
+          <option value="1">10</option>
           <option value="30" selected>30</option>
         </select>
       </div>
       <div>
-        <input type="text" id="playerName" placeholder="Your name" />
-        <button id="btnCreateRoom">Create Room</button>
+        <input type="text" id="playerName" placeholder="Your name" autocomplete="off" />
+        <button onclick="createRoom()">Create Room</button>
       </div>
       <div>
-        <input type="text" id="roomIDInput" placeholder="Room code" />
-        <button id="btnJoinRoom">Join</button>
+        <input type="text" id="roomIDInput" placeholder="Room code" autocomplete="off" />
+        <button onclick="joinRoom()">Join</button>
       </div>
     </div>
 
@@ -194,11 +226,11 @@
 
     <div id="resultArea" style="display:none"></div>
 
-    <div id="buttonsArea" style="display:none; margin-top: 15px;">
+    <div id="buttonsArea" style="display:none;">
       <button id="btnStart">🚀 Start Round</button>
     </div>
 
-    <div id="restartArea" style="display:none">
+    <div id="restartArea" style="display:none;">
       <button onclick="location.reload()">🔄 Return to Start</button>
     </div>
 
@@ -206,10 +238,7 @@
     <audio id="endSound" src="https://www.soundjay.com/buttons/sounds/beep-07.mp3" preload="auto"></audio>
   </div>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getDatabase, ref, onValue, get, set, update } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-
+<script>
   const firebaseConfig = {
     apiKey: "AIzaSyAv02neUyAXLklrx__3WrbO31OmqHSQiDk",
     authDomain: "truth-or-trap-game.firebaseapp.com",
@@ -219,8 +248,8 @@
     messagingSenderId: "989300391170",
     appId: "1:989300391170:web:b4ea01be707e63de29561b"
   };
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase(app);
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
   let roomID, playerName, players = {}, votes = {}, points = {}, liar = null,
       maxRounds = 30, roundNumber = 0, voteTimer = null, countdownInterval = null,
@@ -253,40 +282,45 @@
     return r;
   }
 
-  async function createRoom() {
+  function createRoom() {
     playerName = document.getElementById("playerName").value.trim();
     if (!playerName) return showToast("⚠️ Enter your name!");
     maxRounds = parseInt(document.getElementById("roundsSelect").value);
 
-    const tryCreate = async () => {
+    const tryCreate = () => {
       roomID = makeRoomID();
-      const snap = await get(ref(db, "rooms/" + roomID));
-      if (snap.exists()) return tryCreate();
-      players = {}; players[playerName] = true;
-      points = {}; points[playerName] = 0;
-      await set(ref(db, "rooms/" + roomID), {
-        players, points, roundNumber:0, maxRounds, gameStarted:false, votes:{}, revealed:null
+      db.ref("rooms/" + roomID).once("value").then(snap => {
+        if (snap.exists()) return tryCreate();
+        players = {}; players[playerName] = true;
+        points = {}; points[playerName] = 0;
+        db.ref("rooms/" + roomID).set({
+          players, points, roundNumber:0, maxRounds, gameStarted:false, votes:{}, revealed:null
+        }).then(() => {
+          showToast("✅ Room created!");
+          initAfterJoin();
+        });
       });
-      showToast("✅ Room created!");
-      initAfterJoin();
     };
     tryCreate();
   }
 
-  async function joinRoom() {
+  function joinRoom() {
     playerName = document.getElementById("playerName").value.trim();
     if (!playerName) return showToast("⚠️ Enter your name!");
     roomID = document.getElementById("roomIDInput").value.trim().toUpperCase();
-    const snap = await get(ref(db, "rooms/" + roomID + "/players"));
-    if (!snap.exists()) return showToast("❌ Room not found!");
-    players = snap.val();
-    players[playerName] = true;
-    const roomSnap = await get(ref(db, "rooms/" + roomID));
-    points = roomSnap.val().points || {};
-    points[playerName] = points[playerName] || 0;
-    await update(ref(db, "rooms/" + roomID), {players, points});
-    showToast("✅ Joined successfully!");
-    initAfterJoin();
+    db.ref("rooms/" + roomID + "/players").once("value").then(snap => {
+      if (!snap.exists()) return showToast("❌ Room not found!");
+      players = snap.val();
+      players[playerName] = true;
+      db.ref("rooms/" + roomID).once("value").then(data => {
+        points = data.val().points || {};
+        points[playerName] = points[playerName] || 0;
+        db.ref("rooms/" + roomID).update({players, points}).then(() => {
+          showToast("✅ Joined successfully!");
+          initAfterJoin();
+        });
+      });
+    });
   }
 
   function initAfterJoin() {
@@ -296,7 +330,7 @@
   }
 
   function listenRoom() {
-    onValue(ref(db, "rooms/" + roomID), (snap) => {
+    db.ref("rooms/" + roomID).on("value", snap => {
       const d = snap.val();
       if (!d) return;
       players = d.players || {};
@@ -348,7 +382,7 @@
     }
   }
 
-  async function startRound() {
+  function startRound() {
     if(Object.keys(players).length < 3) {
       return showToast("⚠️ Need at least 3 players!");
     }
@@ -358,7 +392,7 @@
     const li = Object.keys(players)[Math.floor(Math.random()*Object.keys(players).length)];
     const q = questions[Math.floor(Math.random()*questions.length)];
 
-    await update(ref(db, "rooms/" + roomID), {
+    db.ref("rooms/" + roomID).update({
       gameStarted: true,
       roundNumber: rn,
       question: q,
@@ -404,11 +438,11 @@
     tick();
   }
 
-  async function vote(who){
+  function vote(who){
     if(myVote) return;
     myVote = who;
     votes[who] = (votes[who]||0)+1;
-    await set(ref(db,"rooms/"+roomID+"/votes"), votes);
+    db.ref("rooms/"+roomID+"/votes").set(votes);
     showToast("✅ Voted for " + who);
 
     for(let p in players){
@@ -417,46 +451,47 @@
     }
   }
 
-  async function revealLiar(){
+  function revealLiar(){
     clearTimeout(voteTimer);
     clearInterval(countdownInterval);
 
-    const snap = await get(ref(db,"rooms/"+roomID));
-    const d = snap.val();
-    const v = d.votes || {};
-    const liar = d.liar;
-    let most = null, mx=0;
-    for(let p in v){
-      if(v[p]>mx){
-        mx = v[p];
-        most = p;
+    db.ref("rooms/"+roomID).once("value").then(snap=>{
+      const d = snap.val();
+      const v = d.votes || {};
+      const liar = d.liar;
+      let most = null, mx=0;
+      for(let p in v){
+        if(v[p]>mx){
+          mx = v[p];
+          most = p;
+        }
       }
-    }
-    const success = most === liar;
-    const pts = {...d.points};
-    if(success){
-      for(let p in v)
-        if(v[p]>0) pts[p] = (pts[p]||0)+1;
-    } else {
-      pts[liar] = (pts[liar]||0)+2;
-    }
-    const res = {liar, most, success};
-
-    await update(ref(db,"rooms/"+roomID), {
-      revealed: res,
-      points: pts,
-      gameStarted: false,
-    });
-
-    showResult(res);
-
-    setTimeout(()=>{
-      if(roundNumber < maxRounds){
-        startRound();
+      const success = most === liar;
+      const pts = {...d.points};
+      if(success){
+        for(let p in v)
+          if(v[p]>0) pts[p] = (pts[p]||0)+1;
       } else {
-        announceWinner();
+        pts[liar] = (pts[liar]||0)+2;
       }
-    }, 5000);
+      const res = {liar, most, success};
+
+      db.ref("rooms/"+roomID).update({
+        revealed: res,
+        points: pts,
+        gameStarted: false,
+      });
+
+      showResult(res);
+
+      setTimeout(()=>{
+        if(roundNumber < maxRounds){
+          startRound();
+        } else {
+          announceWinner();
+        }
+      }, 5000);
+    });
   }
 
   function showResult(res){
@@ -503,12 +538,21 @@
     showToast("🔗 Invitation link copied!");
   }
 
+  // تغيير إطار اللعبة حسب نوع الجهاز (هاتف / كمبيوتر)
   window.onload = () => {
-    document.getElementById("btnCreateRoom").onclick = createRoom;
-    document.getElementById("btnJoinRoom").onclick = joinRoom;
     document.getElementById("btnStart").onclick = startRound;
     const hash = location.hash.substring(1);
     if(hash) document.getElementById("roomIDInput").value = hash;
+
+    const overlay = document.getElementById("overlay");
+    const isMobile = /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+    if (isMobile) {
+      overlay.style.border = "5px solid #28a745"; // أخضر للهاتف
+      overlay.style.boxShadow = "0 0 20px #28a745";
+    } else {
+      overlay.style.border = "5px solid #007bff"; // أزرق للكمبيوتر
+      overlay.style.boxShadow = "0 0 20px #007bff";
+    }
   };
 </script>
 </body>
